--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -1,17 +1,24 @@
 {
   "name": "eslint-config-custom",
+  "private": true,
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "./.eslintrc.js",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^7.23.0",
+    "eslint": "^8.36.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-turbo": "latest",
     "eslint-plugin-react": "7.31.8",
-    "eslint-config-turbo": "latest"
+    "next": "^13.1.1"
   },
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "@types/eslint": "^8.21.2",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "typescript": "^5.0.2"
   },
   "publishConfig": {
     "access": "public"
