--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,1 +1,41 @@
-{"name":"@ultralocal/database","version":"0.0.0","private":true,"license":"MIT","main":"./src/index.ts","scripts":{"build":"tsup","clean":"rimraf .turbo node_modules dist","lint":"eslint *.ts*","postinstall":"DISABLE_ERD=true pnpm prisma:generate","dev":"pnpm postinstall","prisma:generate":"prisma generate","prisma:push":"DISABLE_ERD=true prisma db push","prebuild":"pnpm postinstall","predev":"pnpm postinstall","studio":"prisma studio"},"dependencies":{"@prisma/client":"^4.11.0","nanoid":"^4.0.1","prisma-redis-middleware":"^4.6.1"},"devDependencies":{"@mermaid-js/mermaid-cli":"^10.0.2","@types/node":"^17.0.12","@ultralocal/tsconfig":"workspace:*","@ultralocal/utils":"workspace:*","esbuild-plugin-eslint":"^0.3.1","eslint":"8.36.0","eslint-config-custom":"workspace:*","prisma":"^4.11.0","prisma-erd-generator":"^1.2.5","tsup":"^6.6.3","typescript":"5.0.2"}}
+{
+  "name": "@ultralocal/database",
+  "version": "0.0.0",
+  "private": true,
+  "license": "MIT",
+  "main": "./src/index.ts",
+  "scripts": {
+    "build": "tsup",
+    "clean": "rimraf .turbo node_modules dist",
+    "lint": "eslint *.ts*",
+    "postinstall": "DISABLE_ERD=true pnpm prisma:generate",
+    "dev": "pnpm postinstall",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "DISABLE_ERD=true prisma db push",
+    "prebuild": "pnpm postinstall",
+    "predev": "pnpm postinstall",
+    "studio": "prisma studio"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.11.0",
+    "cosmiconfig": "^8.1.3",
+    "cosmiconfig-typescript-loader": "^4.3.0",
+    "nanoid": "^4.0.1",
+    "prisma-class-validator-generator": "^0.2.0",
+    "prisma-redis-middleware": "^4.6.1"
+  },
+  "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.0.2",
+    "@types/node": "^17.0.45",
+    "@ultralocal/tsconfig": "workspace:*",
+    "@ultralocal/utils": "workspace:*",
+    "esbuild-plugin-eslint": "^0.3.1",
+    "eslint": "8.36.0",
+    "eslint-config-custom": "workspace:*",
+    "prisma": "^4.11.0",
+    "prisma-erd-generator": "^1.2.5",
+    "ts-node": "^10.9.1",
+    "tsup": "^6.6.3",
+    "typescript": "5.0.2"
+  }
+}
